# opencad-hydrocomplete-plugin

./: .gitignore  CHANGELOG.md  Cargo.toml  PLUGIN.md  README.md  plugin.toml
crates/hydrocomplete/: Cargo.toml
crates/hydrocomplete/src/: about.rs  arch_conduit.rs  atlas14_fetcher.rs  atlas14_presets.rs  bmp.rs  bmp_optimizer.rs  box_conduit.rs  catchment_flow_router.rs  channel_hydraulics.rs  clark_unit_hydrograph.rs  compliance.rs  culvert_hydraulics.rs  detention.rs  gradually_varied_flow.rs  hydrograph_convolution.rs  hydrograph_router.rs  landxml_writer.rs  lib.rs  license.rs  manning.rs  models.rs  network_analysis.rs  network_diagram.rs  output_paths.rs  pdf_report.rs  pipe_cost_catalog.rs  pipe_plan_geometry.rs  prepost.rs  profile_dxf_writer.rs  pump_station.rs  rational.rs  report_html.rs  scs_runoff.rs  scs_unit_hydrograph.rs  sediment.rs  snyder_unit_hydrograph.rs  soil_database.rs  ssurgo.rs  state_compliance.rs  state_compliance_data.rs  (+4 more)
crates/hydrocomplete/tests/fixtures/: charlotte_nc_intensity.csv  ssurgo_cecil_sda.json
crates/stormsewer/: Cargo.toml  README.md
crates/stormsewer/src/: lib.rs  network.rs  report.rs  report_html.rs
crates/stormsewer/src/design/: inlets.rs  review.rs
crates/stormsewer/src/io/: landxml.rs
docs/: OCS_SERVE.md
scripts/: build_hydro_demo.ps1  build_manual_pipe_demo.ps1  extract_24145_hydrology.py  gen_state_compliance.py  install_dev_plugin.ps1  install_marketplace.ps1  ocs_smoke_test.ps1  open_demo_reports.ps1  run_24145_full_workflow.ps1  run_all_demos.ps1  run_ci_tests.ps1  run_e2e_suite.ps1  run_frontend_tests.ps1  run_nightly_e2e.ps1  test_24145_civil_import.ps1  test_24145_drainage.ps1  test_slope_report.ps1  test_v042.ps1  test_xdata_save_reopen.ps1  verify_ocs_install.ps1
src/: analysis.rs  analyze_full.rs  background.rs  civil_import.rs  commands.rs  data.rs  dispatch.rs  drawing_params.rs  lib.rs  (+13 more)
(+10 files in other folders)
