[workspace]
members = [".", "crates/stormsewer", "crates/hydrocomplete"]
resolver = "2"

[package]
name = "opencad-hydrocomplete-plugin"
version = "0.4.9"
edition = "2021"
description = "HydroComplete hydrology/hydraulics add-on for Open CAD Studio — external cdylib plugin."
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib"]
name = "opencad_hydrocomplete_plugin"

[dependencies]
ocs_plugin_api = { git = "https://github.com/HakanSeven12/OpenCADStudio", rev = "495455180865785ae8cc1875e61ef9bc03494cc5", features = ["host"] }
acadrust = "0.3.4"
stormsewer = { path = "crates/stormsewer" }
hydrocomplete = { path = "crates/hydrocomplete" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[patch.crates-io]
acadrust = { git = "https://github.com/HakanSeven12/acadrust", branch = "main" }