[package]
name = "hydrocomplete"
version = "0.1.0"
edition = "2021"
description = "Headless hydrology/hydraulics engine for HydroComplete (OpenCAD + Civil 3D parity)."
license = "GPL-3.0-only"

[dependencies]
stormsewer = { path = "../stormsewer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
printpdf = "0.7"

[lib]
name = "hydrocomplete"