[package]
name = "stormsewer"
version = "0.1.0"
edition = "2021"
description = "Native-Rust storm sewer network hydrology & hydraulics (Rational method, Manning, HGL)."
license = "GPL-3.0-or-later"
repository = "https://github.com/mf4633/stormsewer"
keywords = ["hydrology", "hydraulics", "stormwater", "civil-engineering", "cad"]
categories = ["science", "simulation"]

[dependencies]
quick-xml = { version = "0.37", default-features = false }

[lib]
name = "stormsewer"